# rosegarden-official

./: .gitignore  CHANGELOG  CMakeLists.txt  CMakePresets.json  CONTRIBUTING  Doxyfile  Makefile.in  README  README.DEVELOPERS  README.md  configure.ac  lsan.supp
data/: CMakeLists.txt  data.qrc  locale.qrc  rosegarden.qss
data/appdata/: rosegarden.appdata.xml
data/autoload/: autoload.rg
data/desktop/: com.rosegardenmusic.rosegarden.desktop  rosegarden.desktop
data/examples/: Brandenburg_No3-BWV_1048.rg  Chopin-Prelude-in-E-minor-Aere.rg  Djer-Fire.rg  Hallelujah_Chorus_from_Messiah.rg  Romanza.rg  aveverum.rg  aylindaamiga.rg  beaming.rg  bogus-surf-jam.rg  bwv-1060-trumpet-duet-excerpt.rg  children.rg  doodle-q.rg  exercise_notation.rg  glazunov-for-solo-and-piano-with-cue.rg  glazunov.rg  headers-and-unicode-lyrics.rg  himno_de_riego.rg  interpretation-example.rg  let-all-mortal-flesh.rg  lilypond-alternative-endings.rg  lilypond-alternative-endings_new-way.rg  lilypond-directives.rg  lilypond-staff-groupings.rg  lilypond-tied-grace-notes-2.rg  lilypond-tied-grace-notes.rg  lilypond-up-down.rg  logical-segments-4.rg  mandolin-sonatina.rg  marks-test.rg  mozart-quartet.rg  notation-for-string-orchestra-in-D-minor.rg  perfect-moment.rg  ravel-pc-gmaj-adagio.rg  sicut-locutus.rg  stormy-riders.rg  test_selection.rg  test_tuplets.rg  the-rose-garden.rg  vivaldi-cs3mv2.rg  vivaldi_op44_11_1.rg
data/fonts/mappings/: Feta.xml  fughetta.xml  inkpen.xml  maestro.xml  petrucci.xml
data/locale/: README  ca.ts  cs.ts  cy.ts  de.ts  en.ts  en_GB.ts  en_US.ts  es.ts  et.ts  eu.ts  fi.ts  fr.ts  id.ts  it.ts  ja.ts  keyboard_shortcuts.xml  ko.ts  nl.ts  pl.ts  pt_BR.ts  rosegarden.ts  ru.ts  sv.ts  zh_CN.ts
data/mime/: rosegarden.xml
data/pixmaps/icons/: window-transport.xcf
data/presets/: presets-editable.conf  presets.xml  regenerate-presets
data/rc/: audiomanager.rc  bankeditor.rc  controleditor.rc  controlruler.rc  eventlist.rc  markereditor.rc  markerruler.rc  matrix.rc  matrixeraser.rc  matrixmover.rc  matrixpainter.rc  matrixresizer.rc  matrixselector.rc  matrixvelocity.rc  midimixer.rc  mixer.rc  notation.rc  notationselector.rc  rosegardenmainwindow.rc  segmenttool.rc  temporuler.rc  tempoview.rc  triggermanager.rc
data/regression/: README
data/templates/: SATB4.rgt  SATB_4_Staves.rgt
src/: CMakeLists.txt  buildkey.cmake  getsvn.cmake  rosegarden-version.h.cmake  rosegardenprivate_export.h.cmake
src/base/: AllocateChannels.cpp  AllocateChannels.h  AnalysisTypes.cpp  AnalysisTypes.h  AudioDevice.cpp  AudioDevice.h  AudioLevel.cpp  AudioLevel.h  AudioPluginInstance.cpp  AudioPluginInstance.h  BaseProperties.cpp  BaseProperties.h  BasicQuantizer.cpp  BasicQuantizer.h  Buss.cpp  Buss.h  ChannelInterval.cpp  ChannelInterval.h  Clipboard.cpp  Clipboard.h  Colour.cpp  Colour.h  ColourMap.cpp  ColourMap.h  Composition.cpp  Composition.h  CompositionTimeSliceAdapter.cpp  CompositionTimeSliceAdapter.h  Configuration.cpp  Configuration.h  ControlParameter.cpp  ControlParameter.h  Controllable.h  ControllerContext.cpp  ControllerContext.h  Device.cpp  Device.h  Equation.cpp  Equation.h  Event.cpp  (+91 more)
src/base/figuration/: ChordSegment.cpp  ChordSegment.h  FigChord.cpp  FigChord.h  FigurationSourceMap.cpp  FigurationSourceMap.h  GeneratedRegion.cpp  GeneratedRegion.h  RelativeEvent.h  SegmentFigData.cpp  SegmentFigData.h  SegmentID.cpp  SegmentID.h
src/base/parameterpattern/: AlternatingParameterPattern.cpp  AlternatingParameterPattern.h  FlatParameterPattern.cpp  FlatParameterPattern.h  HalfSinePattern.cpp  HalfSinePattern.h  IncreaseParameterPattern.cpp  IncreaseParameterPattern.h  LinearParameterPattern.cpp  LinearParameterPattern.h  ParameterPattern.cpp  ParameterPattern.h  QuarterSinePattern.cpp  QuarterSinePattern.h  RelativeRamp.cpp  RelativeRamp.h  RingingParameterPattern.cpp  RingingParameterPattern.h  SelectionSituation.cpp  SelectionSituation.h
src/document/: BasicCommand.cpp  BasicCommand.h  BasicSelectionCommand.cpp  BasicSelectionCommand.h  Command.cpp  Command.h  CommandHistory.cpp  CommandHistory.h  CommandRegistry.cpp  CommandRegistry.h  DocumentGet.cpp  DocumentGet.h  GzipFile.cpp  GzipFile.h  LinkedSegmentsCommand.cpp  LinkedSegmentsCommand.h  MetadataHelper.cpp  MetadataHelper.h  RoseXmlHandler.cpp  RoseXmlHandler.h  RosegardenDocument.cpp  RosegardenDocument.h  XmlStorableEvent.cpp  XmlStorableEvent.h  XmlSubHandler.cpp  XmlSubHandler.h
src/misc/: AppendLabel.cpp  AppendLabel.h  ConfigGroups.cpp  ConfigGroups.h  ConnectCBActivated.h  Constants.h  Debug.cpp  Debug.h  FileUtil.cpp  FileUtil.h  PreferenceBool.h  PreferenceInt.h  PreferenceString.h  Preferences.cpp  Preferences.h  Strings.cpp  Strings.h  TempDir.cpp  TempDir.h  Version.cpp  Version.h
src/sequencer/: RosegardenSequencer.cpp  RosegardenSequencer.h  RosegardenSequencerIface.h  SequencerThread.cpp  SequencerThread.h
src/sound/: AkaiMPKmini4.cpp  AkaiMPKmini4.h  AlsaDriver.cpp  AlsaDriver.h  AlsaPort.cpp  AlsaPort.h  AudioCache.cpp  AudioCache.h  AudioFile.cpp  AudioFile.h  AudioFileManager.cpp  AudioFileManager.h  AudioFileTimeStretcher.cpp  AudioFileTimeStretcher.h  AudioInstrumentMixer.cpp  AudioInstrumentMixer.h  AudioPlayQueue.cpp  AudioPlayQueue.h  AudioProcess.cpp  AudioProcess.h  AudioTimeStretcher.cpp  AudioTimeStretcher.h  Audit.cpp  Audit.h  BWFAudioFile.cpp  BWFAudioFile.h  CompositionExportManager.cpp  CompositionExportManager.h  ControlBlock.cpp  ControlBlock.h  DSSIPluginFactory.cpp  DSSIPluginFactory.h  DSSIPluginInstance.cpp  DSSIPluginInstance.h  DummyDriver.cpp  DummyDriver.h  ExternalController.cpp  ExternalController.h  ExternalTransport.h  ImmediateNote.cpp  (+102 more)
test/: CMakeLists.txt  accidentals.cpp  convert.cpp  realtime.cpp  reference_segment.cpp  segmenttransposecommand.cpp  test_notationview_selection.cpp  testmisc.cpp  transpose.cpp  utf8.cpp
test/base/: Makefile  makefile  template-problem.cpp  test.cpp  widestring.cpp
test/base/seq/: Makefile  (+4 more)
test/lilypond/: CMakeLists.txt  README  check_all_files.sh  lilypond_export_test.cpp  lilypond_versions_test.cpp
(+1462 files in other folders)
